WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180221
Fix some NSOperationQueue leaks
https://bugs.webkit.org/show_bug.cgi?id=180221
Summary
Fix some NSOperationQueue leaks
Joseph Pecoraro
Reported
2017-11-30 15:30:57 PST
Fix some NSOperationQueue leaks There are some instances of [NSOperationQueue new] that aren't being released. These will be leaks. Caught by searching for general uses of " new]" in Source.
Attachments
[PATCH] Proposed Fix
(3.04 KB, patch)
2017-11-30 15:31 PST
,
Joseph Pecoraro
thorton
: review+
thorton
: commit-queue+
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(3.01 KB, patch)
2017-11-30 15:33 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-11-30 15:31:44 PST
Created
attachment 328041
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 2
2017-11-30 15:32:55 PST
Err not Web Inspector... Let me fix ChangeLog.
Joseph Pecoraro
Comment 3
2017-11-30 15:33:50 PST
Created
attachment 328042
[details]
[PATCH] Proposed Fix
Wenson Hsieh
Comment 4
2017-11-30 15:47:38 PST
Comment on
attachment 328042
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=328042&action=review
> Source/WebKit/UIProcess/Cocoa/WebViewImpl.mm:3726 > + RetainPtr<NSOperationQueue> queue = adoptNS([NSOperationQueue new]);
Nit - auto here?
> Source/WebKitLegacy/mac/WebView/WebView.mm:6732 > + RetainPtr<NSOperationQueue> queue = adoptNS([NSOperationQueue new]);
Ditto.
WebKit Commit Bot
Comment 5
2017-11-30 16:18:11 PST
Comment on
attachment 328042
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 328042 Committed
r225369
: <
https://trac.webkit.org/changeset/225369
>
WebKit Commit Bot
Comment 6
2017-11-30 16:18:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-11-30 16:20:54 PST
<
rdar://problem/35785793
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug