Fix some NSOperationQueue leaks https://bugs.webkit.org/show_bug.cgi?id=180221

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-30
Reviewed by Wenson Hsieh.

Source/WebKit:

* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::performDragOperation):

Source/WebKitLegacy/mac:

* WebView/WebView.mm:
(-[WebView performDragOperation:]):

Canonical link: https://commits.webkit.org/196219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225369 268f45cc-cd09-0410-ab3c-d52691b4dbfc